@@ -1,3 +1,8 @@
+Wed Apr 27 13:33:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-visualage.h:
+          Removed this file, includes only non existent files
+
 Wed Apr 27 11:02:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Time_Value.inl:
